<resources>
    <string name="app_name">myCalculator</string>
    <string name="c">C</string>
    <string name="inverse">+/-</string>
    <string name="backspace"><![CDATA[<-]]></string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">－</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">×</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">÷</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="awesome_calculator">Awesome calculator</string>
    <string name="awesome_scientific_calculator">Awesome scientific calculator</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    <string name="cot">Cot</string>
    <string name="ln">ln</string>
    <string name="ans">Ans</string>
    <string name="power">^</string>
    <string name="rightbracket">)</string>
    <string name="leftbracket">(</string>
    <string name="factorial">!</string>
    <string name="basic">Basic</string>
</resources>
